syntax = "proto3";
option go_package = "pkg/api";

import "google/protobuf/empty.proto";

package api;

// UserIDs is the standard user id message.
message UserIDs {
  string email = 1;
}

// User is the standard user message.
message User {
  UserIDs ids = 1;
  string password = 2;
}

// UserServices are all the services that can be performed on a user.
service UserServices {
  rpc Create (User) returns (google.protobuf.Empty) {}
  rpc Get (UserIDs) returns (User) {}
  rpc Update (User) returns (google.protobuf.Empty) {}
  rpc Delete (UserIDs) returns (google.protobuf.Empty) {}
}
